<resources>
    <string name="app_name">IntervallTimer</string>


    <string name="rounds">00 </string>
    <string name="zero">00:00</string>
    <string name="start">GO!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fetch__min__sec">Fetch_Min_Sec</string>
    <string name="minutes">Set Minutes</string>
    <string name="seconds">Set Seconds</string>
    <string name="set_rounds">Set Rounds</string>
    <string name="set">set</string>
    <string name="title_activity_fetch__rounds">Fetch_Rounds</string>


    <string name="title_activity_fetch__min__sec_two">Fetch_Min_Sec_two</string>

</resources>
